--- a/www/index.html
+++ b/www/index.html
@@ -47,3 +47,8 @@
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
+<!--
+@Author: Henmanuel Vargas.
+@Email: hemma.hvu@gmail.com
+@Proyect: Loop 2016 all rigths reserved.
+-->
